@@ -9,6 +9,7 @@ import com.fagi.model.InviteCodeContainer;
 import com.fagi.responses.AllIsWell;
 import com.fagi.responses.IllegalInviteCode;
 import com.fagi.responses.UserExists;
+import com.fagi.util.OutputAgentTestUtil;
 import com.fagi.worker.InputAgent;
 import com.fagi.worker.OutputAgent;
 import org.junit.jupiter.api.Assertions;
@@ -20,8 +21,10 @@ import org.mockito.Mockito;
 import java.util.ArrayList;
 import java.util.Collections;
 
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.when;
 
 class CreateUserServerTests {
     private OutputAgent outputAgent;
@@ -36,7 +39,12 @@ class CreateUserServerTests {
         outputAgent = Mockito.mock(OutputAgent.class);
         ConversationHandler conversationHandler = new ConversationHandler(data);
 
-        inputHandler = new InputHandler(inputAgent, outputAgent, conversationHandler, data);
+        inputHandler = new InputHandler(
+                inputAgent,
+                outputAgent,
+                conversationHandler,
+                data
+        );
         inviteCodeContainer = new InviteCodeContainer(new ArrayList<>(Collections.singletonList(new InviteCode("42"))));
         doReturn(inviteCodeContainer)
                 .when(data)
@@ -45,13 +53,20 @@ class CreateUserServerTests {
 
     @Test
     void creatingUserWithIllegalInviteCode_ShouldResultInIllegalInviteCodeResponse() {
-        var createUser = new CreateUser("bob", "123", new InviteCode("23"));
+        var createUser = new CreateUser(
+                "bob",
+                "123",
+                new InviteCode("23")
+        );
 
         inputHandler.handleInput(createUser);
 
         var argumentCaptor = ArgumentCaptor.forClass(IllegalInviteCode.class);
         Mockito
-                .verify(outputAgent, times(1))
+                .verify(
+                        outputAgent,
+                        times(1)
+                )
                 .addResponse(argumentCaptor.capture());
 
         Assertions.assertNotNull(argumentCaptor.getValue());
@@ -61,12 +76,19 @@ class CreateUserServerTests {
     void creatingUserFails_ShouldResultInInviteCodeNotBeingDeleted() {
         var inviteCode = inviteCodeContainer
                 .codes()
-                .get(0);
-        var createUser = new CreateUser("bob", "123", inviteCode);
+                .getFirst();
+        var createUser = new CreateUser(
+                "bob",
+                "123",
+                inviteCode
+        );
 
         doReturn(new UserExists())
                 .when(data)
-                .createUser(createUser.username(), createUser.password());
+                .createUser(
+                        createUser.username(),
+                        createUser.password()
+                );
 
         inputHandler.handleInput(createUser);
 
@@ -77,36 +99,93 @@ class CreateUserServerTests {
     void createUserSucceeds_ShouldDeleteInviteCode() {
         var inviteCode = inviteCodeContainer
                 .codes()
-                .get(0);
-        var createUser = new CreateUser("bob", "123", inviteCode);
+                .getFirst();
+        var createUser = new CreateUser(
+                "bob",
+                "123",
+                inviteCode
+        );
 
         doReturn(new AllIsWell())
                 .when(data)
-                .createUser(createUser.username(), createUser.password());
+                .createUser(
+                        createUser.username(),
+                        createUser.password()
+                );
 
         inputHandler.handleInput(createUser);
 
-        Assertions.assertFalse(inviteCodeContainer.contains(inviteCode));
+        var argumentCaptor = ArgumentCaptor.forClass(InviteCodeContainer.class);
+        Mockito
+                .verify(data,
+                        times(1))
+                .storeInviteCodes(argumentCaptor.capture());
+
+        Assertions.assertAll(
+                () -> Assertions.assertFalse(inviteCodeContainer.contains(inviteCode)),
+                () -> Assertions.assertEquals(inviteCodeContainer, argumentCaptor.getValue())
+        );
     }
 
     @Test
     void createUserSucceeds_ShouldResultInAllIsWellResponse() {
         var inviteCode = inviteCodeContainer
                 .codes()
-                .get(0);
-        var createUser = new CreateUser("bob", "123", inviteCode);
+                .getFirst();
+        var createUser = new CreateUser(
+                "bob",
+                "123",
+                inviteCode
+        );
 
         doReturn(new AllIsWell())
                 .when(data)
-                .createUser(createUser.username(), createUser.password());
+                .createUser(
+                        createUser.username(),
+                        createUser.password()
+                );
 
         inputHandler.handleInput(createUser);
 
         var argumentCaptor = ArgumentCaptor.forClass(AllIsWell.class);
         Mockito
-                .verify(outputAgent, times(1))
+                .verify(
+                        outputAgent,
+                        times(1)
+                )
                 .addResponse(argumentCaptor.capture());
 
         Assertions.assertNotNull(argumentCaptor.getValue());
+    }
+
+    @Test
+    void whenStoreUserFailsWithException_ShouldReturnThatException() {
+        var exception = new IllegalStateException("Fisk");
+
+        when(data.createUser(
+                any(),
+                any()
+        )).thenThrow(exception);
+
+        var inviteCode = inviteCodeContainer
+                .codes()
+                .getFirst();
+        var createUser = new CreateUser(
+                "bob",
+                "123",
+                inviteCode
+        );
+
+        inputHandler.handleInput(createUser);
+
+        var response = OutputAgentTestUtil.captureResponse(
+                outputAgent,
+                IllegalStateException.class
+        );
+
+        Assertions.assertEquals(
+                exception,
+                response
+        );
     }
 }
